--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.2.0",
     "axios": "^1.6.8",
     "firebase": "^10.10.0",
     "react": "^18.2.0",
